# PhysicsEngine

./: CMakeLists.txt
Demos/: ParticleDemo.cpp  Particle_Demo.cpp  RiddgitBodyDemo.cpp  RigitBodyDemo.cpp
Physics/: CMakeLists.txt
Physics/Demos/: ParticleDemo.cpp  RigitBodyDemo.cpp
Physics/include/collisions/: Plane.h
Physics/include/collisions/BoundingVolumeHierarchies/: TopDown.h
Physics/include/collisions/BoundingVolumeHierarchies/TopDown/: PartitioningAxisChoice.h  PartitioningStrategies.h  SplitPointChoice.h  TopDown.h
Physics/include/collisions/BoundingVolumes/: AABB.h  BoundingVolume.h  OBB.h  Sphere.h
Physics/include/collisions/PrimitiveTests/: ClosestPoint.h  PrimitiveTests.h
Physics/include/collisions/utils/: AABB.h  Octree.h
Physics/include/core/objects/3D/: Object3.h  Particle.h  RigitBody.h
Physics/include/core/systems/: ParticleSystem.h  RigitBodySystem.h
Physics/include/forces/: DragForce.h  Force.h  FrictionForce.h  GravityForce.h
Physics/include/solvers/: Euler.h  Solver.h
Physics/src/collisions/: Plane.cpp
Physics/src/collisions/BoundingVolumes/: AABB.cpp  OBB.cpp  Sphere.cpp
Physics/src/core/objects/3D/: Object3.cpp  Particle.cpp  RigitBody.cpp
Physics/src/core/systems/: ParticleSystem.cpp  RigitBodySystem.cpp
Physics/src/forces/: DragForce.cpp  FrictionForce.cpp  GravityForce.cpp  SpringForce.cpp
Rendering/: CMakeLists.txt  install.sh
Rendering/Demos/: main.cpp
Rendering/UserInput/: CMakeLists.txt
Rendering/UserInput/source/: input.cpp
Rendering/include/: Camera.h  Geometries.h  Geomtries.h  Object.h  Shader.h  Wireframe.h  texture.h  window.h
Rendering/libs/assimp/: revision.h
Rendering/libs/glad/: glad.c  glad.h
Rendering/libs/glfw-3.4/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
Rendering/libs/glfw-3.4/docs/: Makefile  cmake_install.cmake
Rendering/libs/glfw-3.4/src/: Makefile  cmake_install.cmake
Rendering/libs/glm/: readme.md
Rendering/libs/stbi/: stb_image.cpp
Rendering/shaders/: loadShader.cpp
Rendering/shaders/sources/: fragment.txt  vertex.txt
Rendering/shaders/texture/: vertex.txt
Rendering/shaders/wireframe/: fragment.txt
Rendering/src/: Geometries.cpp  Geomtries.cpp  Shader.cpp  Wireframe.cpp  main.cpp  texture.cpp  window.cpp
include/collisions/: ClosestPoint.h  Plane.h  PrimitiveTests.h
include/collisions/BoundingVolumeHierarchies/: BottomUp.h  Insertion.h
include/collisions/BoundingVolumes/: AABB.h  BoundingVolume.h  OBB.h  Sphere.h
include/collisions/PrimitiveTests/: PrimitiveTests.h
include/collisions/utils/: AABB.h  Octree.h
include/core/: Object2.h  Object3.h
include/core/objects/3D/: Object3.h  Particle.h  RidgitBody.h  RigitBody.h
include/core/systems/: ParticleSystem.h  RidgitBodySystem.h  RigitBodySystem.h
include/forces/: DragForce.h  Force.h  FrictionForce.h  SpringForce.h
include/math/: Matrix2.h  Matrix3.h  Plane3.h  Point3.h  Quaternion.h  TODOS  Vector2.h  Vector3.h  utils.h
include/solvers/: Euler.h  RK4.h  Solver.h
math/: CMakeLists.txt
math/cmake-Math-Library/: CMakeCache.txt
math/include/: Matrix3.h  Plane3.h  Point3.h  Quaternion.h  Vector3.h  math.cpp  utils.h
src/collisions/: Plane.cpp
src/collisions/BoundingVolumes/: AABB.cpp  OBB.cpp  Sphere.cpp
src/core/objects/3D/: Object3.cpp  Particle.cpp  RidgitBody.cpp  RigitBody.cpp
src/core/systems/: ParticleSystem.cpp  RigitBodySystem.cpp
src/forces/: DragForce.cpp  FrictionForce.cpp  GravityForce.cpp  SpringForce.cpp
src/math/: math.cpp
tests/solvers/: RK4Test.cpp
